feat(seo): add meta tags, JSON-LD, canonical & preconnect; implement SEO-friendly permalinks (route, slug/id generation, history.replace) and homepage meta updater
Co-authored-by: Genie <genie@cosine.sh>

--- a/index.html
+++ b/index.html
@@ -4,7 +4,48 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="https://ganudenu.store/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ganudenu Marketplace</title>
+
+    <!-- Primary SEO -->
+    <title>Ganudenu Marketplace — Buy • Sell • Hire in Sri Lanka</title>
+    <meta name="description" content="Ganudenu is a modern online marketplace in Sri Lanka to buy, sell, and hire. Browse vehicles, property, jobs, electronics, mobiles, and home &amp; garden with advanced filters." />
+    <link rel="canonical" href="https://ganudenu.store/" />
+    <meta name="robots" content="index, follow, max-image-preview:large" />
+
+    <!-- Site-wide keywords (kept in background; not shown on page) -->
+    <meta name="keywords" content="online marketplace Sri Lanka, buy and sell, vehicles for sale, cars for sale, bikes for sale, property for sale, houses for rent, jobs in Sri Lanka, electronics deals, mobile phones, home and garden, classifieds, ganudenu, sri lankan ads, second hand, used cars, used bikes, apartments, land, annex, driver jobs, IT jobs, sales jobs, cheap phones, smartphones, laptops, furniture" />
+
+    <!-- Open Graph -->
+    <meta property="og:site_name" content="Ganudenu Marketplace" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Ganudenu Marketplace — Buy • Sell • Hire in Sri Lanka" />
+    <meta property="og:description" content="Discover great deals on vehicles, property, jobs, electronics, mobiles, and home &amp; garden. Post your ad in minutes." />
+    <meta property="og:url" content="https://ganudenu.store/" />
+    <meta property="og:image" content="https://ganudenu.store/og-image.png" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Ganudenu Marketplace — Buy • Sell • Hire in Sri Lanka" />
+    <meta name="twitter:description" content="Buy, sell, and hire across vehicles, property, jobs, electronics, mobiles, and home &amp; garden." />
+    <meta name="twitter:image" content="https://ganudenu.store/og-image.png" />
+
+    <!-- Performance hints -->
+    <link rel="preconnect" href="https://ganudenu.store" crossorigin />
+    <link rel="dns-prefetch" href="https://ganudenu.store" />
+
+    <!-- JSON-LD: WebSite with SearchAction -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Ganudenu Marketplace",
+      "url": "https://ganudenu.store/",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://ganudenu.store/search?q={query}",
+        "query-input": "required name=query"
+      }
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
