feat: notify saved-search users on approve; add keyword_mode AND/OR, multi-select filters, price slider, language selector, lazy-load routes and modulepreload for main.jsx
Co-authored-by: Genie <genie@cosine.sh>

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <link rel="preconnect" href="https://ganudenu.store" crossorigin />
     <link rel="dns-prefetch" href="https://ganudenu.store" />
 
+    <!-- Preload app entry to reduce FCP -->
+    <link rel="modulepreload" href="/src/main.jsx" />
+
     <!-- JSON-LD: WebSite with SearchAction -->
     <script type="application/ld+json">
     {
