feat(payments): add Meta Pay SDK support, CSP header, MetaPayButton component, and integrate into PaymentPendingPage
Co-authored-by: Genie <genie@cosine.sh>

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     <!-- Preload app entry to reduce FCP -->
     <link rel="modulepreload" href="/src/main.jsx" />
 
+    <!-- Meta Pay JS SDK (deprecated for new partners, added for compatibility if enabled on your payment partner) -->
+    <script src="https://static.xx.fbcdn.net/payments_sdk/v1/metapay_sdk.js"></script>
+
     <!-- JSON-LD: WebSite with SearchAction -->
     <script type="application/ld+json">
     {
